# hermes-gnosis

./: .gitignore  README.md  pyproject.toml
hermes_gnosis/: __init__.py  _client.py  _compat.py  _config.py  _install.py  plugin.yaml
tests/: conftest.py  test_client.py  test_config.py  test_provider.py
