[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-gnosis"
version = "0.1.0"
description = "Hermes Agent memory provider plugin backed by a self-hosted gnosis memory service."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "nolgiainc" }]
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

# Forward-compat registration in hermes's pip plugin group. Note: as of
# hermes-agent today, memory ("exclusive") providers are activated via the
# $HERMES_HOME/plugins/<name>/ directory discovery path, not this entry
# point — run `hermes-gnosis-install` after pip install. The entry point is
# declared so `hermes plugins list` can see the package and so the plugin
# picks up entry-point-based memory discovery if/when hermes ships it.
[project.entry-points."hermes_agent.plugins"]
gnosis = "hermes_gnosis"

[project.scripts]
hermes-gnosis-install = "hermes_gnosis._install:main"

[tool.hatch.build.targets.wheel]
packages = ["hermes_gnosis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
